# typesafe_coordinate_systems

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TSConfigVersion.cmake
.github/workflows/: cmake.yml
include/cs/: typesafe_coordinate_systems.h
include/ts/: typesafe_coordinate_systems.h  typesafe_system.h
test/: CMakeLists.txt
test/include/: connector.h  cs_test.h  ts_test.h
test/src/: cs_test.cxx  ts_test.cxx
